<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sukima TODO</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_todo_detail">TodoDetail</string>
    <string name="add">Add</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="subject">Subject</string>
    <string name="title_activity_todo_list">TodoList</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="confirm_delete">Confirm delete.</string>
    <string name="deleted">Deleted %s.</string>
    <string name="due_date">Due date</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="date_empty">----/--/--</string>

</resources>
